fix gap point indicator

--- a/src/app/components/gameFlow/gameFlow.module.scss
+++ b/src/app/components/gameFlow/gameFlow.module.scss
@@ -59,6 +59,6 @@
   left: 50%;
   transform: translate(-50%,-50%);
   display: flex;
-  gap: 0.5rem;
+  gap: 0.25rem;
   justify-content: center;
 }
